--- a/stylesheets/buttons.css
+++ b/stylesheets/buttons.css
@@ -9,7 +9,7 @@ body {
 	text-align: center;
 	padding-top: 100px;
 	background: #CCCCCC;
-	background: linear-gradient(#CCCCCC, #BBBBBB);
+	background: linear-gradient(#CCCCCC, #DDDDDD);
 	font-family: 'Merriweather Sans', arial, verdana;
 }
 
